--- a/locale/fr_CA/submission.xml
+++ b/locale/fr_CA/submission.xml
@@ -9,7 +9,7 @@
   *
   * Localization strings for the fr_CA (Français (Canada)) locale.
   *
-  * $Id$
+  * $Id: submission.xml,v 1.4 2009/10/07 17:05:27 jmacgreg Exp $
   -->
 
 <locale name="fr_CA" full_name = "Français (Canada)">
@@ -19,34 +19,34 @@
 	<message key="submission.addSuppFile">Ajouter un fichier supplémentaire</message>
 	<message key="submission.ask">Demander</message>
 	<message key="submission.backToSubmissionEditing">Retour à la révision de la soumission</message>
-	<message key="submission.changeComments">Changer pour</message>
+	<message key="submission.changeComments">Modifier pour</message>
 	<message key="submission.comments.addComment">Ajouter un commentaire</message>
 	<message key="submission.comments.comments">Commentaires</message>
 	<message key="submission.comments.confirmDelete">Êtes-vous certain de vouloir supprimer ce commentaire?</message>
 	<message key="submission.comments.corrections">Corrections</message>
-	<message key="submission.comments.editComment">Éditer un commentaire</message>
+	<message key="submission.comments.editComment">Modifier un commentaire</message>
 	<message key="submission.comments.importPeerReviews">Importer les Évaluations par les pairs</message>
-	<message key="submission.comments.importPeerReviews.reviewerLetter">évaluateur {$reviewerLetter}:</message>
+	<message key="submission.comments.importPeerReviews.reviewerLetter">Évaluateur {$reviewerLetter}:</message>
 	<message key="submission.comments.noComments">Aucun commentaire</message>
-	<message key="submission.comments.noReviews"> Aucune révision</message>
+	<message key="submission.comments.noReviews"> Aucune évaluation</message>
 	<message key="submission.comments.review">Évaluation</message>
 	<message key="submission.comments.sendDecisionToReviewers">Envoyer la décision éditoriale aux évaluateurs</message>
 	<message key="submission.comments.subject">Objet</message>
-	<message key="submission.complete">Complété</message>
-	<message key="submission.done">Terminé</message>
+	<message key="submission.complete">Terminé</message>
+	<message key="submission.done">Terminer</message>
 	<message key="submission.dueDate">Date d'échéance</message>
 	<message key="submission.due">Échéance</message>
 	<message key="submission.editing">Révision</message>
 	<message key="submission.editMetadata">Modifier les métadonnées</message>
-	<message key="submission.email.backToEmailLog">Retour au journal des courriels</message>
-	<message key="submission.email.confirmClearLog">Êtes-vous certain de vouloir effacer le journal des courriels pour cette soumission?</message>
-	<message key="submission.email.confirmDeleteLogEntry">Êtes-vous certain de vouloir supprimer cette entrée du journal des courriels?</message>
-	<message key="submission.email.deleteLogEntry">Supprimer l'entrée du journal</message>
+	<message key="submission.email.backToEmailLog">Retour au Registre de courriels</message>
+	<message key="submission.email.confirmClearLog">Êtes-vous certain de vouloir effacer le registre de courriels pour cette soumission?</message>
+	<message key="submission.email.confirmDeleteLogEntry">Êtes-vous certain de vouloir supprimer cette entrée du registre des courriels?</message>
+	<message key="submission.email.deleteLogEntry">Supprimer l'entrée du registre</message>
 	<message key="submission.emailLog">Registre de courriels</message>
-	<message key="submission.event.backToEventLog">Retour au journal des événements</message>
-	<message key="submission.event.confirmClearLog">Êtes-vous certain de vouloir effacer le journal des évènements pour cette soumission?</message>
-	<message key="submission.event.confirmDeleteLogEntry">Êtes-vous certain de vouloir supprimer cette entrée du journal des événements?</message>
-	<message key="submission.event.deleteLogEntry">Supprimer l'entrée du journal</message>
+	<message key="submission.event.backToEventLog">Retour au Registre d'événements</message>
+	<message key="submission.event.confirmClearLog">Êtes-vous certain de vouloir effacer le registre d'évènements pour cette soumission?</message>
+	<message key="submission.event.confirmDeleteLogEntry">Êtes-vous certain de vouloir supprimer cette entrée du registre d'événements?</message>
+	<message key="submission.event.deleteLogEntry">Supprimer l'entrée du registre</message>
 	<message key="submission.event.general.metadataUpdated">Métadonnées de la soumission mises à jour</message>
 	<message key="submission.event.general.suppFileUpdated">Fichier de la soumission mis à jour</message>
 	<message key="submission.event.reviewer.reviewAcceptedByProxy">Évaluation acceptée par procuration</message>
@@ -65,45 +65,45 @@
 	<message key="submission.event.reviewer.reviewRevision">Fichiers de révision de l'évaluateur mis à jour</message>
 	<message key="submission.files">Fichiers</message>
 	<message key="submission.galley">Épreuve</message>
-	<message key="submission.history.clearLog">Effacer le journal</message>
+	<message key="submission.history.clearLog">Effacer le registre</message>
 	<message key="submission.history">Historique</message>
-	<message key="submission.history.noLogEntries">Aucune entrée dans le journal</message>
+	<message key="submission.history.noLogEntries">Aucune entrée dans le registre</message>
 	<message key="submission.history.recentLogEntries">Entrées récentes</message>
 	<message key="submission.history.submissionEmailLog">Registre de courriels</message>
 	<message key="submission.history.submissionEventLog">Registre d'événements</message>
-	<message key="submission.history.submissionNotes">Notes des soumissions</message>
-	<message key="submission.history.viewLog">Voir le journal</message>
+	<message key="submission.history.submissionNotes">Notes de soumissions</message>
+	<message key="submission.history.viewLog">Voir le registre</message>
 	<message key="submission.indexing">Indexation</message>
-	<message key="submission.initiated">Commencé</message>
+	<message key="submission.initiated">En cours</message>
 	<message key="submission.lastModified">Dernière modification</message>
 	<message key="submission.layout.addGalley">Ajouter une épreuve de mise en page</message>
-	<message key="submission.layout.confirmDeleteGalley">Êtes-vous certain de vouloir supprimer définitivement cette épreuve en placard?</message>
-	<message key="submission.layout.confirmDeleteGalleyImage">Êtes-vous certain de vouloir supprimer cette image de l'épreuve en placard?</message>
+	<message key="submission.layout.confirmDeleteGalley">Êtes-vous certain de vouloir supprimer définitivement cette épreuve?</message>
+	<message key="submission.layout.confirmDeleteGalleyImage">Êtes-vous certain de vouloir supprimer cette image de l'épreuve?</message>
 	<message key="submission.layout.confirmDeleteSupplementaryFile">Êtes-vous certain de vouloir supprimer définitivement ce fichier supplémentaire?</message>
 	<message key="submission.layout.deleteGalleyStylesheet">Supprimer cette feuille de style.</message>
 	<message key="submission.layout.editGalley">Modifier une épreuve de mise en page</message>
-	<message key="submission.layout.galleyFileData">Données sur le fichier des galées</message>
+	<message key="submission.layout.galleyFileData">Données sur le fichier de l'épreuve</message>
 	<message key="submission.layout.galleyFormat">Format de l'épreuve</message>
 	<message key="submission.layout.galleyHTMLData">Fichiers HTML de l'épreuve</message>
 	<message key="submission.layout.galleyImages">Images</message>
-	<message key="submission.layout.galleyLabelInstructions">L'étiquette de l'épreuve en placard sert à identifier le format du fichier de l'article (par ex., HTML, PDF, etc.).</message>
+	<message key="submission.layout.galleyLabelInstructions">L'étiquette de l'épreuve sert à identifier le format du fichier de l'article (par ex., HTML, PDF, etc.).</message>
 	<message key="submission.layout.galleyLabel">Étiquette</message>
-	<message key="submission.layout.galleyLabelRequired">Une étiquette d'épreuve en placard est obligatoire.</message>
-	<message key="submission.layout.galleyLanguageRequired">Une langue est requise pour l'épreuve en placard.</message>
-	<message key="submission.layout.galleyLocaleRequired">La langue de l'épreuve est obligatoire.</message>
+	<message key="submission.layout.galleyLabelRequired">Létiquette de l'épreuve est obligatoire.</message>
+	<message key="submission.layout.galleyLanguageRequired">La langue de l'épreuve est obligatoire.</message>
+	<message key="submission.layout.galleyLocaleRequired">La langue (avec paramètre régional) de l'épreuve est obligatoire.</message>
 	<message key="submission.layout.galleyNoImages">Aucune image</message>
 	<message key="submission.layout.galleys">Épreuves</message>
-	<message key="submission.layout.galleyStylesheet">Fichier de feuilles de style</message>
+	<message key="submission.layout.galleyStylesheet">Fichier de la feuille de style</message>
 	<message key="submission.layout.galleyStyle">Style</message>
-	<message key="submission.layout.initialGalleyCreation">Création de l'épreuve en placard initiale</message>
+	<message key="submission.layout.initialGalleyCreation">Création de l'épreuve initiale</message>
 	<message key="submission.layout.layoutFile">Fichier de mise en page</message>
 	<message key="submission.layout">Mise en page</message>
 	<message key="submission.layout.layoutVersion">Version de mise en page</message>
 	<message key="submission.layout.newGalley">Créer une nouvelle épreuve</message>
 	<message key="submission.layout.newSupplementaryFile">Télécharger un nouveau fichier supplémentaire</message>
-	<message key="submission.layout.noStyleFile">Aucun fichier de feuille de style n'a été ajouté à cette épreuve en placard.</message>
+	<message key="submission.layout.noStyleFile">Aucun fichier de feuille de style n'a été ajouté à cette épreuve.</message>
 	<message key="submission.layout.supplementaryFiles">Révision du fichier supplémentaire</message>
-	<message key="submission.layout.viewingGalley">Voir l'épreuve en placard de la submission</message>
+	<message key="submission.layout.viewingGalley">Voir l'épreuve de la submission</message>
 	<message key="submission.layout.viewProof">Voir l'épreuve</message>
 	<message key="submission.metadata">Métadonnées de la soumission</message>
 	<message key="submission.noReviewAssignments">Aucune évaluation assignée</message>
@@ -111,7 +111,7 @@
 	<message key="submission.notes.attachedFile">Fichier en pièce jointe</message>
 	<message key="submission.notes.backToSubmissionNotes">Retour aux notes sur la soumission</message>
 	<message key="submission.notes.breadcrumb">Notes</message>
-	<message key="submission.notes.clearAllNotes">Supprimer toutes les notes</message>
+	<message key="submission.notes.clearAllNotes">Retirer toutes les notes</message>
 	<message key="submission.notes.collapseNotes">Réduire les notes</message>
 	<message key="submission.notes.confirmDeleteAll">Supprimer toutes les notes de la soumission?</message>
 	<message key="submission.notes.confirmDelete">Supprimer cette note de la soumission?</message>
@@ -119,9 +119,9 @@
 	<message key="submission.notes.deleteNote">Supprimer la note</message>
 	<message key="submission.notes.editNote">Modifier la note</message>
 	<message key="submission.notes.expandNotes">Développer les notes</message>
-	<message key="submission.notes.noSubmissionNotes">Aucune note pour la soumission</message>
-	<message key="submission.notes.removeUploadedFile">Enlever le fichier téléchargé</message>
-	<message key="submission.notes">Notes sur la soumission</message>
+	<message key="submission.notes.noSubmissionNotes">Aucune note de soumission</message>
+	<message key="submission.notes.removeUploadedFile">Supprimer le fichier téléchargé</message>
+	<message key="submission.notes">Notes  de la soumission</message>
 	<message key="submission.notes.updateNote">Mettre à jour la note</message>
 	<message key="submission.notes.viewNotes">Voir les notes</message>
 	<message key="submission.originalFile">Fichier original</message>
@@ -129,7 +129,7 @@
 	<message key="submission.page.history">#{$id} Historique</message>
 	<message key="submission.page.review">#{$id} Évaluation</message>
 	<message key="submission.page.summary">#{$id} Résumé</message>
-	<message key="submission.peerReview">Évaluation par un pair</message>
+	<message key="submission.peerReview">Évaluation par les pairs</message>
 	<message key="submission.recommendation">Recommandation</message>
 	<message key="submission.rejected">Refusé</message>
 	<message key="submission.request">Demander</message>
@@ -137,8 +137,8 @@
 	<message key="submission.restrictions">Restrictions</message>
 	<message key="submission.reviewMetadata">Évaluer les métadonnées</message>
 	<message key="submission.review">Évaluation</message>
-	<message key="submission.reviewVersion">Version à évaluer</message>
-	<message key="submissions.active">Actif</message>
+	<message key="submission.reviewVersion">Version d'évaluation</message>
+	<message key="submissions.active">Active</message>
 	<message key="submissions.archived">Archivé</message>
 	<message key="submission.saveMetadata">Enregistrer les métadonnées</message>
 	<message key="submissions.completed">Terminé</message>
