--- a/locale/fr_CA/user.xml
+++ b/locale/fr_CA/user.xml
@@ -9,13 +9,13 @@
   *
   * Localization strings for the fr_CA (Français (Canada)) locale.
   *
-  * $Id$
+  * $Id: user.xml,v 1.5 2009/10/07 17:05:27 jmacgreg Exp $
   -->
 
 <locale name="fr_CA" full_name = "Français (Canada)">
 	<message key="user.affiliation">Affiliation</message>
 	<message key="user.affiliations">Affiliations</message>
-	<message key="user.biography">Biographie</message>
+	<message key="user.biography">Note biographique</message>
 	<message key="user.biography.description">(Par ex., département et position)</message>
 	<message key="user.changeMyPassword">Modifier mon mot de passe</message>
 	<message key="user.changePassword">Modifier le mot de passe</message>
@@ -26,28 +26,28 @@
 	<message key="user.fax">Télécopieur</message>
 	<message key="user.feminine">F</message>
 	<message key="user.firstName">Prénom</message>
-	<message key="user.gender">Genre</message>
+	<message key="user.gender">Sexe</message>
 	<message key="user.initialsExample">Joan Alice Smith = JAS</message>
 	<message key="user.initials">Initiales</message>
 	<message key="user.interests">Intérêts pour les évaluations</message>
 	<message key="user.lastName">Nom de famille</message>
-	<message key="user.login.accountDisabledWithReason">Votre compte a été inactivé pour les raisons suivantes : {$reason}</message>
-	<message key="user.login.accountDisabled">Votre compte a été inactivé. Veuillez communiquer avec l'administrateur du site pour plus d'information.</message>
-	<message key="user.login.accountNotValidated">Votre adresse électronique n'a pas été validée. Veuillez vérifier votre courriel et suivre les directives présentées. Si vous n'avez pas reçu de courriel, vous devrez peut-être communiquer avec le webmestre pour obtenir de l'aide.</message>
+	<message key="user.login.accountDisabledWithReason">Votre compte a été désactivé pour les raisons suivantes : {$reason}</message>
+	<message key="user.login.accountDisabled">Votre compte a été désactivé. Veuillez communiquer avec l'administrateur du site pour plus d'information.</message>
+	<message key="user.login.accountNotValidated">Votre courriel n'a pas été validé. Veuillez vérifier votre courriel et suivre les directives présentées. Si vous n'avez pas reçu de courriel, vous devrez peut-être communiquer avec l'administrateur du site pour obtenir de l'aide.</message>
 	<message key="user.login.activate">Activer le compte</message>
-	<message key="user.login.activated">Merci d'avoir activé votre compte. Vous pouvez maintenant ouvrir une session en utilisant les authentifiants fournis lors de la création de votre compte.</message>
-	<message key="user.login.changePasswordInstructions"><![CDATA[Vous devez sélectionner un nouveau mot de passe avant de pouvoir ouvrir la session à ce site.<br /><br />Veuillez entrer votre nom d'usager et vos mots de passe courant et nouveau ci- dessous pour modifier le mot de passe pour votre compte.]]></message>
-	<message key="user.login.forgotPassword">Vous avez Oublié votre mot de passe?</message>
-	<message key="user.login.loginError">Nom d'usager ou mot de passe non valide. Veuillez essayer encore une fois.</message>
+	<message key="user.login.activated">Merci d'avoir activé votre compte. Vous pouvez maintenant vous connecter en utilisant les authentifiants fournis lors de la création de votre compte.</message>
+	<message key="user.login.changePasswordInstructions"><![CDATA[Vous devez sélectionner un nouveau mot de passe avant de pouvoir vous connecter à ce site.<br /><br />Veuillez entrer votre nom d'utilisateur et vos mots de passe actuel et nouveau ci-dessous pour modifier le mot de passe de votre compte.]]></message>
+	<message key="user.login.forgotPassword">Vous avez oublié votre mot de passe?</message>
+	<message key="user.login.loginError">Nom d'usager ou mot de passe non valide. Veuillez essayer de nouveau.</message>
 	<message key="user.login">Se connecter</message>
 	<message key="user.logIn">Se connecter</message>
-	<message key="user.login.lostPassword.confirmationSent">Une confirmation a été envoyée à votre adresse électronique. Veuillez suivre les instructions dans le courriel pour restaurer votre mot de passe.</message>
-	<message key="user.login.lostPassword.invalidHash">Malheureusement, le lien sur lequel vous avez cliqué est expiré ou n'est pas valide. Veuillez essayer de restaurer votre mot de passe encore une fois.</message>
-	<message key="user.login.lostPassword.invalidUser">Aucun usager n'existe avec l'adresse électronique indiquée.</message>
-	<message key="user.login.lostPassword.passwordSent">Un nouveau mot de passe a été envoyé à votre adresse électronique. Vous pouvez maintenant vous connecter au site avec votre nouveau mot de passe.</message>
-	<message key="user.login.registeredEmail">Courriel de l'usager inscrit</message>
+	<message key="user.login.lostPassword.confirmationSent">Une confirmation a été envoyée à votre adresse de courriel. Veuillez suivre les instructions dans le courriel pour réinitialiser votre mot de passe.</message>
+	<message key="user.login.lostPassword.invalidHash">Malheureusement, le lien sur lequel vous avez cliqué est expiré ou n'est pas valide. Veuillez essayer de réinitialiser votre mot de passe encore une fois.</message>
+	<message key="user.login.lostPassword.invalidUser">Aucun utilisateur n'existe avec l'adresse de courriel indiquée.</message>
+	<message key="user.login.lostPassword.passwordSent">Un nouveau mot de passe a été envoyé à votre adresse de courriel. Vous pouvez maintenant vous connecter au site avec votre nouveau mot de passe.</message>
+	<message key="user.login.registeredEmail">Courriel de l'utilisateur inscrit</message>
 	<message key="user.login.rememberUsernameAndPassword">Mémoriser mon nom d'usager et mon mot de passe</message>
-	<message key="user.login.resetPassword">Restaurer le mot de passe</message>
+	<message key="user.login.resetPassword">Réinitialiser le mot de passe</message>
 	<message key="user.logOut">Se déconnecter</message>
 	<message key="user.mailingAddress">Adresse postale</message>
 	<message key="user.masculine">M</message>
@@ -58,32 +58,32 @@
 	<message key="user.phone">Téléphone</message>
 	<message key="user.profile.changePasswordInstructions">Entrer votre mot de passe actuel et votre nouveau mot de passe ci-dessous pour modifier le mot de passe de votre compte.</message>
 	<message key="user.profile.editProfile">Modifier le profil</message>
-	<message key="user.profile.form.emailRequired">Une adresse électronique valide est obligatoire.</message>
-	<message key="user.profile.form.firstNameRequired">Un prénom est obligatoire.</message>
-	<message key="user.profile.form.lastNameRequired">Un nom de famille est obligatoire.</message>
-	<message key="user.profile.form.newPasswordRequired">Vous devez entrer votre nouveau mot de passe.</message>
-	<message key="user.profile.form.oldPasswordInvalid">Le mot de passe actuel que vous avez entré est incorrect.</message>
-	<message key="user.profile.form.openAccessNotifications">Courriel avisant d'un numéro à libre accès</message>
-	<message key="user.profile.form.passwordRequired">Un mot de passe est obligatoire.</message>
+	<message key="user.profile.form.emailRequired">Une adresse de courriel valide est obligatoire.</message>
+	<message key="user.profile.form.firstNameRequired">Le prénom est obligatoire.</message>
+	<message key="user.profile.form.lastNameRequired">Le nom de famille est obligatoire.</message>
+	<message key="user.profile.form.newPasswordRequired">Vous devez saisir votre nouveau mot de passe.</message>
+	<message key="user.profile.form.oldPasswordInvalid">Le mot de passe actuel saisi est incorrect.</message>
+	<message key="user.profile.form.openAccessNotifications">Avis par courriel d'un nouveau numéro à accès libre</message>
+	<message key="user.profile.form.passwordRequired">Le mot de passe est obligatoire.</message>
 	<message key="user.profile.form.profileImage">Image du profil</message>
 	<message key="user.profile.form.publishedNotifications">Courriel avisant de la parution d'un nouveau numéro</message>
-	<message key="user.profile.form.urlInvalid">Le URL spécifié n'est pas valide. Veuillez vérifier le URL et essayer de nouveau. (Suggestion : Ajoutez http:// au début de l'URL.)</message>
-	<message key="user.profile.form.usernameRequired">Un nom d'usager est obligatoire.</message>
-	<message key="user.profile.leavePasswordBlank">Laisser les zones du mot de passe en blanc pour conserver le mot de passe actuel.</message>
+	<message key="user.profile.form.urlInvalid">L'URL spécifié n'est pas valide. Veuillez vérifier l'URL et essayer de nouveau. (Suggestion : Essayer d'ajouter http:// au début de l'URL.)</message>
+	<message key="user.profile.form.usernameRequired">Le nom d'utilisateur est obligatoire.</message>
+	<message key="user.profile.leavePasswordBlank">Laisser vide les champs reliés au mot de passe pour conserver le mot de passe actuel.</message>
 	<message key="user.profile.newPassword">Nouveau mot de passe</message>
 	<message key="user.profile.oldPassword">Mot de passe actuel</message>
 	<message key="user.profile">Profil</message>
-	<message key="user.profile.publicProfile">Profil</message>
-	<message key="user.profile.repeatNewPassword">Entrer un nouveau le mot de passe</message>
-	<message key="user.register.completeForm">Remplir ce formulaire pour vous inscrire à cette revue.</message>
-	<message key="user.register.form.emailExists">L'adresse électronique sélectionnée est déjà utilisée par un autre usager.</message>
+	<message key="user.profile.publicProfile">Profil utilisateur</message>
+	<message key="user.profile.repeatNewPassword">Saisir de nouveau le nouveau mot de passe</message>
+	<message key="user.register.completeForm">Compléter ce formulaire pour vous inscrire à cette revue.</message>
+	<message key="user.register.form.emailExists">L'adresse de courriel sélectionnée est déjà utilisée par un autre utilisateur.</message>
 	<message key="user.register.form.passwordsDoNotMatch">Les mots de passe ne correspondent pas.</message>
-	<message key="user.register.form.usernameAlphaNumeric">Le nom d'usager peut contenir seulement des caractères alphanumériques, traits de soulignement, et traits d'union, et doit commencer et se terminer par un caractère alphanumérique.</message>
-	<message key="user.register.form.usernameExists">Le nom d'usager sélectionné est déjà utilisé par un autre usager.</message>
+	<message key="user.register.form.usernameAlphaNumeric">Le nom d'utilisateur peut contenir uniquement des caractères alphanumériques, traits de soulignement, et traits d'union, et doit commencer et se terminer par un caractère alphanumérique.</message>
+	<message key="user.register.form.usernameExists">Le nom d'utilisateur sélectionné est déjà utilisé par un autre utilisateur.</message>
 	<message key="user.register.passwordLengthRestriction">Le mot de passe doit avoir au moins {$length} caractères.</message>
-	<message key="user.register.registerAs">S'inscrire comme</message>
+	<message key="user.register.registerAs">S'inscrire en tant que</message>
 	<message key="user.register">S'inscrire</message>
-	<message key="user.register.usernameRestriction">Le nom d'usager ne doit contenir que des lettres minuscules, chiffres, et traits d'union ou traits de soulignement.</message>
+	<message key="user.register.usernameRestriction">Le nom d'utilisateur ne doit contenir que des lettres minuscules, chiffres, et traits d'union/de soulignement.</message>
 	<message key="user.role.reader">Lecteur</message>
 	<message key="user.role.readers">Lecteurs</message>
 	<message key="user.role.reviewer">Évaluateur</message>
