--- a/locale/ca_ES/currencies.xml
+++ b/locale/ca_ES/currencies.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE currencies SYSTEM "../../dtd/currencies.dtd">
 
 <!--
   * locale/ca_ES/currencies.xml
@@ -8,19 +9,8 @@
   *
   * Currencies data XML file. Based on ISO 4217.
   *
-  * $Id: currencies.xml,v 1.7 2009/10/06 23:13:31 asmecher Exp $
+  * $Id: currencies.xml,v 1.8 2009/10/07 21:13:19 asmecher Exp $
   -->
-
-<!DOCTYPE currencies [
-	<!ELEMENT currencies (currency+)>
-		<!ATTLIST currencies
-			locale CDATA #REQUIRED>
-	<!ELEMENT currency EMPTY>
-		<!ATTLIST currency
-			code_alpha CDATA #REQUIRED
-			code_numeric CDATA #REQUIRED
-			name CDATA #REQUIRED>
-]>
 
 <currencies locale="ca_ES">
 	<currency name="Dòlar dels Estats Units" code_alpha="USD" code_numeric="840" />
