--- a/locale/da_DK/currencies.xml
+++ b/locale/da_DK/currencies.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE currencies SYSTEM "../../dtd/currencies.dtd">
 
 <!--
   * locale/da_DK/currencies.xml
@@ -10,19 +11,8 @@
   *
   * Translated by Niels Erik Frederiksen, nef@statsbiblioteket.dk
   *
-  * $Id: currencies.xml,v 1.3 2009/10/06 23:13:31 asmecher Exp $
+  * $Id: currencies.xml,v 1.4 2009/10/07 21:13:19 asmecher Exp $
   -->
-
-<!DOCTYPE currencies [
-	<!ELEMENT currencies (currency+)>
-		<!ATTLIST currencies
-			locale CDATA #REQUIRED>
-	<!ELEMENT currency EMPTY>
-		<!ATTLIST currency
-			code_alpha CDATA #REQUIRED
-			code_numeric CDATA #REQUIRED
-			name CDATA #REQUIRED>
-]>
 
 <currencies locale="da_DK">
 	<currency name="US dollar" code_alpha="USD" code_numeric="840" />
